Project

General

Profile

Actions

Bug #21576

closed

encryption: PutObj response does not include sse-kms headers

Added by Casey Bodley over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #21637: luminous: encryption: PutObj response does not include sse-kms headersResolvedAbhishek LekshmananActions
Actions #1

Updated by Casey Bodley over 6 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Ken Dreyer over 6 years ago

  • Description updated (diff)
Actions #3

Updated by Casey Bodley over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21637: luminous: encryption: PutObj response does not include sse-kms headers added
Actions #5

Updated by Ken Dreyer over 6 years ago

  • Description updated (diff)
Actions #6

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF